--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.0</version>
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
     </plugins>
@@ -21,7 +21,16 @@
   <packaging>jar</packaging>
 
   <name>NFAStudy</name>
-  <url>http://maven.apache.org</url>
+  <url>http://github.com/whtoo/NFAStudy</url>
+  <description>
+    本项目为参考《计算的本质》一书第3章相关内容的实验代码，欢迎交流。
+  </description>
+  <developers>
+    <developer>
+      <email>whtoo@qq.com</email>
+      <name>Arthur.Blitz</name>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
